link-all-email-sub

--- a/free/ai-image.html
+++ b/free/ai-image.html
@@ -6,6 +6,7 @@
   <title>免费图像处理 API 大全 | 开发者资源导航</title>
   <!-- 外部资源引入 -->
   <script src="https://cdn.tailwindcss.com"></script>
+    <script src="../assets/js/email-subscription.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
   
   <!-- Tailwind配置 - 保持一致的设计系统 -->
