--- a/free/image.html
+++ b/free/image.html
@@ -5,7 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>免费图像处理 API / Free Image Processing APIs</title>
     <!-- 外部资源引入 -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com">        // 初始化邮件订阅组件
+        if (typeof initEmailSubscription === "function") {
+            initEmailSubscription("subscriptionContainer", {
+                title: "订阅更新",
+                description: "获取最新资源信息",
+                buttonText: "订阅",
+                style: "tailwind",
+                successMessage: "订阅成功！您将收到最新的资源信息。",
+                errorMessage: "订阅失败，请稍后重试。"
+            });
+        } else {
+            console.error("邮件订阅组件未加载");
+        }
+    </script>
+    <script src="../assets/js/email-subscription.js">        // 初始化邮件订阅组件
+        if (typeof initEmailSubscription === "function") {
+            initEmailSubscription("subscriptionContainer", {
+                title: "订阅更新",
+                description: "获取最新资源信息",
+                buttonText: "订阅",
+                style: "tailwind",
+                successMessage: "订阅成功！您将收到最新的资源信息。",
+                errorMessage: "订阅失败，请稍后重试。"
+            });
+        } else {
+            console.error("邮件订阅组件未加载");
+        }
+    </script>
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     
     <!-- Tailwind配置 - 保持与主站一致的主题色彩系统 -->
@@ -31,6 +58,19 @@
                     },
                 },
             }
+        }
+            // 初始化邮件订阅组件
+        if (typeof initEmailSubscription === "function") {
+            initEmailSubscription("subscriptionContainer", {
+                title: "订阅更新",
+                description: "获取最新资源信息",
+                buttonText: "订阅",
+                style: "tailwind",
+                successMessage: "订阅成功！您将收到最新的资源信息。",
+                errorMessage: "订阅失败，请稍后重试。"
+            });
+        } else {
+            console.error("邮件订阅组件未加载");
         }
     </script>
     
@@ -822,6 +862,19 @@
                 }
             });
         });
+            // 初始化邮件订阅组件
+        if (typeof initEmailSubscription === "function") {
+            initEmailSubscription("subscriptionContainer", {
+                title: "订阅更新",
+                description: "获取最新资源信息",
+                buttonText: "订阅",
+                style: "tailwind",
+                successMessage: "订阅成功！您将收到最新的资源信息。",
+                errorMessage: "订阅失败，请稍后重试。"
+            });
+        } else {
+            console.error("邮件订阅组件未加载");
+        }
     </script>
 </body>
 </html>
