--- a/free/domain.html
+++ b/free/domain.html
@@ -5,9 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>免费域名 / 子域名 | 开发者资源导航</title>
   <!-- 引入外部资源 -->
-  <script src="https://cdn.tailwindcss.com">        // 初始化邮件订阅组件
+        } else {
+            console.error("邮件订阅组件未加载");
+        }
+            // 初始化邮件订阅组件
         if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("subscriptionContainer", {
+            initEmailSubscription("domainPageSubscription", {
                 title: "订阅更新",
                 description: "获取最新资源信息",
                 buttonText: "订阅",
@@ -19,9 +22,12 @@
             console.error("邮件订阅组件未加载");
         }
     </script>
-    <script src="../assets/js/email-subscription.js">        // 初始化邮件订阅组件
+        } else {
+            console.error("邮件订阅组件未加载");
+        }
+            // 初始化邮件订阅组件
         if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("subscriptionContainer", {
+            initEmailSubscription("domainPageSubscription", {
                 title: "订阅更新",
                 description: "获取最新资源信息",
                 buttonText: "订阅",
@@ -54,9 +60,12 @@
         },
       }
     }
-          // 初始化邮件订阅组件
+        } else {
+            console.error("邮件订阅组件未加载");
+        }
+            // 初始化邮件订阅组件
         if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("subscriptionContainer", {
+            initEmailSubscription("domainPageSubscription", {
                 title: "订阅更新",
                 description: "获取最新资源信息",
                 buttonText: "订阅",
@@ -706,9 +715,12 @@
         }
       });
     });
-          // 初始化邮件订阅组件
+        } else {
+            console.error("邮件订阅组件未加载");
+        }
+            // 初始化邮件订阅组件
         if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("subscriptionContainer", {
+            initEmailSubscription("domainPageSubscription", {
                 title: "订阅更新",
                 description: "获取最新资源信息",
                 buttonText: "订阅",
