--- a/free/image.html
+++ b/free/image.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>免费图像处理 API / Free Image Processing APIs</title>
     <!-- 外部资源引入 -->
-    <script src="https://cdn.tailwindcss.com">        // 初始化邮件订阅组件
+        } else {
+            console.error("邮件订阅组件未加载");
+        }
+            // 初始化邮件订阅组件
         if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("subscriptionContainer", {
+            initEmailSubscription("imagePageSubscription", {
                 title: "订阅更新",
                 description: "获取最新资源信息",
                 buttonText: "订阅",
@@ -19,9 +22,12 @@
             console.error("邮件订阅组件未加载");
         }
     </script>
-    <script src="../assets/js/email-subscription.js">        // 初始化邮件订阅组件
+        } else {
+            console.error("邮件订阅组件未加载");
+        }
+            // 初始化邮件订阅组件
         if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("subscriptionContainer", {
+            initEmailSubscription("imagePageSubscription", {
                 title: "订阅更新",
                 description: "获取最新资源信息",
                 buttonText: "订阅",
@@ -59,9 +65,12 @@
                 },
             }
         }
+        } else {
+            console.error("邮件订阅组件未加载");
+        }
             // 初始化邮件订阅组件
         if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("subscriptionContainer", {
+            initEmailSubscription("imagePageSubscription", {
                 title: "订阅更新",
                 description: "获取最新资源信息",
                 buttonText: "订阅",
@@ -862,9 +871,12 @@
                 }
             });
         });
+        } else {
+            console.error("邮件订阅组件未加载");
+        }
             // 初始化邮件订阅组件
         if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("subscriptionContainer", {
+            initEmailSubscription("imagePageSubscription", {
                 title: "订阅更新",
                 description: "获取最新资源信息",
                 buttonText: "订阅",
