--- a/free/log.html
+++ b/free/log.html
@@ -5,9 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>免费日志 / Logging & Error Tracking Services</title>
   <!-- 外部资源引入 -->
-  <script src="https://cdn.tailwindcss.com">        // 初始化邮件订阅组件
+        } else {
+            console.error("邮件订阅组件未加载");
+        }
+            // 初始化邮件订阅组件
         if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("subscriptionContainer", {
+            initEmailSubscription("logPageSubscription", {
                 title: "订阅更新",
                 description: "获取最新资源信息",
                 buttonText: "订阅",
@@ -19,9 +22,12 @@
             console.error("邮件订阅组件未加载");
         }
     </script>
-    <script src="../assets/js/email-subscription.js">        // 初始化邮件订阅组件
+        } else {
+            console.error("邮件订阅组件未加载");
+        }
+            // 初始化邮件订阅组件
         if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("subscriptionContainer", {
+            initEmailSubscription("logPageSubscription", {
                 title: "订阅更新",
                 description: "获取最新资源信息",
                 buttonText: "订阅",
@@ -56,9 +62,12 @@
         },
       }
     }
-          // 初始化邮件订阅组件
+        } else {
+            console.error("邮件订阅组件未加载");
+        }
+            // 初始化邮件订阅组件
         if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("subscriptionContainer", {
+            initEmailSubscription("logPageSubscription", {
                 title: "订阅更新",
                 description: "获取最新资源信息",
                 buttonText: "订阅",
@@ -890,9 +899,12 @@
         alert('已加载全部服务');
       }, 2000);
     });
-          // 初始化邮件订阅组件
+        } else {
+            console.error("邮件订阅组件未加载");
+        }
+            // 初始化邮件订阅组件
         if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("subscriptionContainer", {
+            initEmailSubscription("logPageSubscription", {
                 title: "订阅更新",
                 description: "获取最新资源信息",
                 buttonText: "订阅",
