--- a/free/icons.html
+++ b/free/icons.html
@@ -5,40 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>免费图标资源 / Free Icons</title>
     <!-- 外部资源引入 -->
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-            // 初始化邮件订阅组件
-        if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("iconsPageSubscription", {
-                title: "订阅更新",
-                description: "获取最新资源信息",
-                buttonText: "订阅",
-                style: "tailwind",
-                successMessage: "订阅成功！您将收到最新的资源信息。",
-                errorMessage: "订阅失败，请稍后重试。"
-            });
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-    </script>
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-            // 初始化邮件订阅组件
-        if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("iconsPageSubscription", {
-                title: "订阅更新",
-                description: "获取最新资源信息",
-                buttonText: "订阅",
-                style: "tailwind",
-                successMessage: "订阅成功！您将收到最新的资源信息。",
-                errorMessage: "订阅失败，请稍后重试。"
-            });
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-    </script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="../assets/js/email-subscription.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     
     <!-- Tailwind配置 - 建立图标主题色彩系统 -->
@@ -817,7 +785,7 @@
                 description: "获取最新图标资源信息",
                 buttonText: "订阅",
                 style: "tailwind",
-                successMessage: "订阅成功！您将收到最新的图标资源信息。",
+                successMessage: "订阅请求已发送！\n请查收来自 noreply@free.rinuo.com 的邮件，并点击验证链接完成订阅\n\n如果没有收到邮件，请检查垃圾邮件文件夹",
                 errorMessage: "订阅失败，请稍后重试。"
             });
         } else {
