--- a/index.html
+++ b/index.html
@@ -618,17 +618,7 @@
       <div class="max-w-3xl mx-auto text-center">
         <h3 class="text-2xl font-bold mb-3">获取最新资源更新</h3>
         <p class="text-muted mb-6">订阅我们的通讯，第一时间获取新上线的免费资源和独家优惠</p>
-        <div class="flex flex-col sm:flex-row gap-3 max-w-lg mx-auto">
-          <input 
-            type="email" 
-            placeholder="输入您的邮箱地址" 
-            class="flex-grow px-4 py-3 rounded-lg border border-gray-200 focus:outline-none focus:ring-2 focus:ring-primary/30 focus:border-primary transition-colors"
-            required
-          >
-          <button class="bg-primary hover:bg-primary/90 text-white px-6 py-3 rounded-lg transition-colors font-medium whitespace-nowrap">
-            立即订阅
-          </button>
-        </div>
+        <div id="homeHeroSubscription" class="max-w-lg mx-auto"></div>
         <p class="text-xs text-muted mt-3">我们尊重您的隐私，不会向第三方分享您的信息</p>
       </div>
     </div>
@@ -1057,13 +1047,20 @@
       
       // 初始化邮件订阅组件
       if (typeof initEmailSubscription === 'function') {
+        // Hero 区块订阅
+        initEmailSubscription('homeHeroSubscription', {
+          title: '获取最新资源更新',
+          description: '订阅我们的通讯，第一时间获取新上线的免费资源和独家优惠',
+          buttonText: '立即订阅',
+          style: 'tailwind'
+        });
+
+        // 页脚订阅
         initEmailSubscription('homePageSubscription', {
           title: '订阅更新',
           description: '获取最新免费资源信息',
           buttonText: '订阅',
-          style: 'tailwind',
-          successMessage: '订阅成功！您将收到最新的免费资源信息。',
-          errorMessage: '订阅失败，请稍后重试。'
+          style: 'tailwind'
         });
       } else {
         console.error('邮件订阅组件未加载');
