--- a/free/map.html
+++ b/free/map.html
@@ -5,40 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>免费地图与地理位置接口 | 开发者资源导航</title>
   <!-- 外部资源引入 -->
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-            // 初始化邮件订阅组件
-        if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("mapPageSubscription", {
-                title: "订阅更新",
-                description: "获取最新资源信息",
-                buttonText: "订阅",
-                style: "tailwind",
-                successMessage: "订阅成功！您将收到最新的资源信息。",
-                errorMessage: "订阅失败，请稍后重试。"
-            });
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-    </script>
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-            // 初始化邮件订阅组件
-        if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("mapPageSubscription", {
-                title: "订阅更新",
-                description: "获取最新资源信息",
-                buttonText: "订阅",
-                style: "tailwind",
-                successMessage: "订阅成功！您将收到最新的资源信息。",
-                errorMessage: "订阅失败，请稍后重试。"
-            });
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-    </script>
+  <script src="../assets/js/email-subscription.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
   
   <!-- Tailwind配置 - 保持一致的设计系统 -->
@@ -872,12 +839,7 @@
           <p class="text-gray-400 text-sm mt-4">
             订阅更新，获取最新资源信息
           </p>
-          <div class="mt-2 flex">
-            <input type="email" placeholder="您的邮箱地址" class="px-3 py-2 rounded-l-lg text-dark flex-grow text-sm focus:outline-none">
-            <button class="bg-primary hover:bg-primary/90 text-white px-3 py-2 rounded-r-lg transition-colors">
-              订阅
-            </button>
-          </div>
+          <div id="mapPageSubscription" class="mt-2"></div>
         </div>
       </div>
       
@@ -988,22 +950,20 @@
         }
       });
     });
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-            // 初始化邮件订阅组件
-        if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("mapPageSubscription", {
-                title: "订阅更新",
-                description: "获取最新资源信息",
-                buttonText: "订阅",
-                style: "tailwind",
-                successMessage: "订阅成功！您将收到最新的资源信息。",
-                errorMessage: "订阅失败，请稍后重试。"
-            });
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
+    
+    // 初始化邮件订阅组件
+    if (typeof initEmailSubscription === "function") {
+        initEmailSubscription("mapPageSubscription", {
+            title: "订阅更新",
+            description: "获取最新资源信息",
+            buttonText: "订阅",
+            style: "tailwind",
+            successMessage: "订阅请求已发送！\n请查收来自 noreply@free.rinuo.com 的邮件，并点击验证链接完成订阅\n\n如果没有收到邮件，请检查垃圾邮件文件夹",
+            errorMessage: "订阅失败，请稍后重试。"
+        });
+    } else {
+        console.error("邮件订阅组件未加载");
+    }
     </script>
 </body>
 </html>
