--- a/free/domain.html
+++ b/free/domain.html
@@ -5,41 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>免费域名 / 子域名 | 开发者资源导航</title>
   <!-- 引入外部资源 -->
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-            // 初始化邮件订阅组件
-        if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("domainPageSubscription", {
-                title: "订阅更新",
-                description: "获取最新资源信息",
-                buttonText: "订阅",
-                style: "tailwind",
-                successMessage: "订阅成功！您将收到最新的资源信息。",
-                errorMessage: "订阅失败，请稍后重试。"
-            });
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-    </script>
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-            // 初始化邮件订阅组件
-        if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("domainPageSubscription", {
-                title: "订阅更新",
-                description: "获取最新资源信息",
-                buttonText: "订阅",
-                style: "tailwind",
-                successMessage: "订阅成功！您将收到最新的资源信息。",
-                errorMessage: "订阅失败，请稍后重试。"
-            });
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-    </script>
-  <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <script src="../assets/js/email-subscription.js"></script>  <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
   
   <!-- Tailwind 配置 -->
   <script>
@@ -61,22 +27,6 @@
       }
     }
         } else {
-            console.error("邮件订阅组件未加载");
-        }
-            // 初始化邮件订阅组件
-        if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("domainPageSubscription", {
-                title: "订阅更新",
-                description: "获取最新资源信息",
-                buttonText: "订阅",
-                style: "tailwind",
-                successMessage: "订阅成功！您将收到最新的资源信息。",
-                errorMessage: "订阅失败，请稍后重试。"
-            });
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-    </script>
   
   <!-- 自定义工具类 -->
   <style type="text/tailwindcss">
@@ -716,21 +666,5 @@
       });
     });
         } else {
-            console.error("邮件订阅组件未加载");
-        }
-            // 初始化邮件订阅组件
-        if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("domainPageSubscription", {
-                title: "订阅更新",
-                description: "获取最新资源信息",
-                buttonText: "订阅",
-                style: "tailwind",
-                successMessage: "订阅成功！您将收到最新的资源信息。",
-                errorMessage: "订阅失败，请稍后重试。"
-            });
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-    </script>
 </body>
 </html>
