--- a/free/image.html
+++ b/free/image.html
@@ -5,41 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>免费图像处理 API / Free Image Processing APIs</title>
     <!-- 外部资源引入 -->
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-            // 初始化邮件订阅组件
-        if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("imagePageSubscription", {
-                title: "订阅更新",
-                description: "获取最新资源信息",
-                buttonText: "订阅",
-                style: "tailwind",
-                successMessage: "订阅成功！您将收到最新的资源信息。",
-                errorMessage: "订阅失败，请稍后重试。"
-            });
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-    </script>
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-            // 初始化邮件订阅组件
-        if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("imagePageSubscription", {
-                title: "订阅更新",
-                description: "获取最新资源信息",
-                buttonText: "订阅",
-                style: "tailwind",
-                successMessage: "订阅成功！您将收到最新的资源信息。",
-                errorMessage: "订阅失败，请稍后重试。"
-            });
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-    </script>
-    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <script src="../assets/js/email-subscription.js"></script>    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     
     <!-- Tailwind配置 - 保持与主站一致的主题色彩系统 -->
     <script>
@@ -66,22 +32,6 @@
             }
         }
         } else {
-            console.error("邮件订阅组件未加载");
-        }
-            // 初始化邮件订阅组件
-        if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("imagePageSubscription", {
-                title: "订阅更新",
-                description: "获取最新资源信息",
-                buttonText: "订阅",
-                style: "tailwind",
-                successMessage: "订阅成功！您将收到最新的资源信息。",
-                errorMessage: "订阅失败，请稍后重试。"
-            });
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-    </script>
     
     <!-- 自定义工具类 -->
     <style type="text/tailwindcss">
@@ -737,11 +687,7 @@
                     <p class="text-gray-400 text-sm mt-4">
                         订阅更新，获取最新API和工具信息
                     </p>
-                    <div class="mt-2 flex">
-                        <input type="email" placeholder="您的邮箱地址" class="px-3 py-2 rounded-l-lg text-dark flex-grow text-sm focus:outline-none">
-                        <button class="bg-primary hover:bg-primary/90 text-white px-3 py-2 rounded-r-lg transition-colors">
-                            订阅
-                        </button>
+                    <div id="imagePageSubscription" class="mt-2">
                     </div>
                 </div>
             </div>
@@ -872,21 +818,5 @@
             });
         });
         } else {
-            console.error("邮件订阅组件未加载");
-        }
-            // 初始化邮件订阅组件
-        if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("imagePageSubscription", {
-                title: "订阅更新",
-                description: "获取最新资源信息",
-                buttonText: "订阅",
-                style: "tailwind",
-                successMessage: "订阅成功！您将收到最新的资源信息。",
-                errorMessage: "订阅失败，请稍后重试。"
-            });
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-    </script>
 </body>
 </html>
