--- a/free/ai-text.html
+++ b/free/ai-text.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free AI Text / NLP APIs / 免费 AI 文本 API</title>
-    <!-- 外部资源引入 -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<!-- 外部资源引入 -->
+<script src="https://cdn.tailwindcss.com"></script>
+<script src="../assets/js/email-subscription.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     
     <!-- Tailwind配置 - AI文本API主题色彩系统 -->
     <script>
