--- a/free/analytics.html
+++ b/free/analytics.html
@@ -6,9 +6,10 @@
     <title>免费网站流量统计工具大全 | 精选20款Web分析工具资源</title>
     <meta name="description" content="收录20款主流免费网站流量统计工具，涵盖隐私友好型、开源自托管、轻量级等多种类型，帮助网站管理员分析访问数据、优化用户体验。">
     
-    <!-- 外部资源引入 -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<!-- 外部资源引入 -->
+<script src="https://cdn.tailwindcss.com"></script>
+<script src="../assets/js/email-subscription.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     
     <!-- Tailwind配置 -->
     <script>
