--- a/free/log.html
+++ b/free/log.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>免费日志 / Logging & Error Tracking Services</title>
-  <!-- 外部资源引入 -->
-  <script src="../assets/js/email-subscription.js"></script>  <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  
+ <!-- 外部资源引入 -->
+
+ <script src="../assets/js/email-subscription.js"></script>
+ 
+  <!-- 引入外部资源 -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <!-- Tailwind配置 -->
   <script>
     tailwind.config = {
