--- a/free/api-docs.html
+++ b/free/api-docs.html
@@ -7,8 +7,9 @@
     <meta name="description" content="精选25款专业免费API文档生成工具，涵盖OpenAPI支持、可视化界面、自动生成等多种类型，满足不同API文档需求。">
     
     <!-- 外部资源引入 -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="../assets/js/email-subscription.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     
     <!-- Tailwind配置 -->
     <script>
