--- a/free/detail/supabase.html
+++ b/free/detail/supabase.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Supabase 免费计划详细整理</title>
   <!-- 外部资源引入 -->
-  <script src="../assets/js/email-subscription.js"></script>  <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  
+  <script src="../assets/js/email-subscription.js"></script>  
+  <!-- 引入外部资源 -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <!-- Tailwind配置 - 保持一致的设计系统 -->
   <script>
     tailwind.config = {
@@ -28,11 +30,12 @@
             inter: ['Inter', 'system-ui', 'sans-serif'],
           },
         },
-      }
-    }
-        } else {
-  
+      } // Closes the 'theme' object definition
+    }; // Completes the tailwind.config assignment with a semicolon
+  </script> <!-- Closes the JavaScript configuration script tag -->
+
   <!-- 自定义工具类 -->
+  <!-- Custom utility classes for Tailwind CSS -->
   <style type="text/tailwindcss">
     @layer utilities {
       .content-auto {
@@ -824,8 +827,5 @@
             mobileMenu.classList.add('hidden');
           }
         }
-      });
-    });
-        } else {
-</body>
-</html>
+      }); // Closes the click event listener for the anchor
+    }); // Closes the forEach loop iterating over anchors
