--- a/free/api.html
+++ b/free/api.html
@@ -6,8 +6,8 @@
   <title>免费公共 API 服务导航 | 开发者资源导航</title>
   <!-- 外部资源引入 -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="../assets/js/email-subscription.js"></script>  <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <script src="../assets/js/email-subscription.js"></script>
   
   <!-- Tailwind配置 -->
   <script>
