--- a/free/instagram-scraping.html
+++ b/free/instagram-scraping.html
@@ -75,13 +75,10 @@
       <!-- 桌面端导航 -->
       <div class="hidden md:flex items-center space-x-6">
         <a href="../index.html" class="text-dark hover:text-primary transition-colors">首页</a>
-        <a href="weather.html" class="text-dark hover:text-primary transition-colors">天气接口</a>
-        <a href="ai.html" class="text-dark hover:text-primary transition-colors">AI接口</a>
-        <a href="icons.html" class="text-dark hover:text-primary transition-colors">图标资源</a>
-        <a href="index.html" class="text-dark hover:text-primary transition-colors">免费资源总览</a>
-        <a href="categories.html" class="text-primary font-medium">资源分类</a>
+        <a href="index.html" class="text-dark hover:text-primary transition-colors">资源分类</a>
+        <a href="../sitemap.html" class="text-dark hover:text-primary transition-colors">网站地图</a>
         <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="text-muted hover:text-primary transition-colors flex items-center">
-          <i class="fa fa-github mr-1"></i> 贡献资源
+          <i class="fa fa-github mr-1"></i> 提交资源
         </a>
       </div>
       
@@ -95,9 +92,8 @@
     <div class="md:hidden hidden bg-white border-t border-gray-100" id="mobileMenu">
       <div class="container mx-auto px-4 py-3 flex flex-col space-y-3">
         <a href="../index.html" class="py-2 text-dark hover:text-primary transition-colors">首页</a>
-        <a href="weather.html" class="py-2 text-dark hover:text-primary transition-colors">天气接口</a>
-        <a href="ai.html" class="py-2 text-dark hover:text-primary transition-colors">AI接口</a>
-        <a href="icons.html" class="py-2 text-dark hover:text-primary transition-colors">图标资源</a>
+        <a href="index.html" class="py-2 text-dark hover:text-primary transition-colors">资源分类</a>
+        <a href="../sitemap.html" class="py-2 text-dark hover:text-primary transition-colors">网站地图</a>
         <a href="index.html" class="py-2 text-dark hover:text-primary transition-colors">免费资源总览</a>
         <a href="categories.html" class="py-2 text-primary font-medium">资源分类</a>
         <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="py-2 text-muted hover:text-primary transition-colors flex items-center">
