--- a/free/waf.html
+++ b/free/waf.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- 引入订阅模块 -->
-    <script src="/static/js/subscribe-module.js"></script>
+    <script src="../assets/js/email-subscription.js"></script>
     
     <!-- Tailwind配置 - 保持安全工具主题色彩系统一致性 -->
     <script>
