--- a/free/map.html
+++ b/free/map.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>免费地图与地理位置接口 | 开发者资源导航</title>
   <!-- 外部资源引入 -->
+  <script src="https://cdn.tailwindcss.com"></script>
   <script src="../assets/js/email-subscription.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
   
@@ -30,23 +31,7 @@
         },
       }
     }
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-            // 初始化邮件订阅组件
-        if (typeof initEmailSubscription === "function") {
-            initEmailSubscription("mapPageSubscription", {
-                title: "订阅更新",
-                description: "获取最新资源信息",
-                buttonText: "订阅",
-                style: "tailwind",
-                successMessage: "订阅成功！您将收到最新的资源信息。",
-                errorMessage: "订阅失败，请稍后重试。"
-            });
-        } else {
-            console.error("邮件订阅组件未加载");
-        }
-    </script>
+  </script>
   
   <!-- 自定义工具类 -->
   <style type="text/tailwindcss">
