--- a/free/push.html
+++ b/free/push.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>免费推送通知服务大全 | 开发者资源导航</title>
   <!-- 外部资源引入 -->
-  <script src="../assets/js/email-subscription.js"></script>  <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <script src="../assets/js/email-subscription.js"></script>
   
   <!-- Tailwind配置 - 保持一致的设计系统 -->
   <script>
@@ -29,7 +31,7 @@
         },
       }
     }
-        } else {
+  </script>
   
   <!-- 自定义工具类 -->
   <style type="text/tailwindcss">
