--- a/free/index.html
+++ b/free/index.html
@@ -162,6 +162,7 @@
         <a href="../index.html" class="text-dark hover:text-primary transition-colors relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:transition-all hover:after:w-full">首页</a>
         <a href="index.html" class="text-primary font-medium relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-full after:bg-primary">资源分类</a>
         <a href="../sitemap.html" class="text-dark hover:text-primary transition-colors relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:transition-all hover:after:w-full">网站地图</a>
+        <a href="../api.html" class="text-dark hover:text-primary transition-colors relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:transition-all hover:after:w-full">API手册</a>
         <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="text-muted hover:text-primary transition-colors flex items-center group/link">
           <i class="fa fa-github mr-1 transition-transform group-hover/link:rotate-12"></i> 提交资源
         </a>
@@ -187,6 +188,7 @@
         <a href="../index.html" class="py-2 text-dark hover:text-primary transition-colors">首页</a>
         <a href="index.html" class="py-2 text-primary font-medium">资源分类</a>
         <a href="../sitemap.html" class="py-2 text-dark hover:text-primary transition-colors">网站地图</a>
+        <a href="../api.html" class="py-2 text-dark hover:text-primary transition-colors">API手册</a>
         <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="py-2 text-muted hover:text-primary transition-colors flex items-center">
           <i class="fa fa-github mr-1"></i> 提交资源
         </a>
