--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
           <a href="#" class="text-primary font-medium relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-full after:bg-primary after:rounded-full">首页</a>
           <a href="free/index.html" class="text-muted hover:text-primary transition-colors relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:rounded-full after:transition-all hover:after:w-full">资源分类</a>
           <a href="sitemap.html" class="text-muted hover:text-primary transition-colors relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:rounded-full after:transition-all hover:after:w-full">网站地图</a>
+          <a href="api.html" class="text-muted hover:text-primary transition-colors relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:rounded-full after:transition-all hover:after:w-full">API手册</a>
           <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="text-muted hover:text-primary transition-colors relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:rounded-full after:transition-all hover:after:w-full">提交资源</a>
           <button id="darkModeToggle" class="text-muted hover:text-primary transition-colors p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
             <i class="fa fa-moon-o text-lg"></i>
@@ -163,7 +164,8 @@
         <nav class="flex flex-col space-y-3 pb-2">
           <a href="#" class="py-2 px-3 text-primary font-medium bg-primary/5 rounded-lg">首页</a>
           <a href="free/index.html" class="py-2 px-3 text-muted hover:text-primary hover:bg-gray-50 rounded-lg transition-colors">资源分类</a>
-          <a href="#" class="py-2 px-3 text-muted hover:text-primary hover:bg-gray-50 rounded-lg transition-colors">热门资源</a>
+          <a href="sitemap.html" class="py-2 px-3 text-muted hover:text-primary hover:bg-gray-50 rounded-lg transition-colors">网站地图</a>
+          <a href="api.html" class="py-2 px-3 text-muted hover:text-primary hover:bg-gray-50 rounded-lg transition-colors">API手册</a>
           <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="py-2 px-3 text-muted hover:text-primary hover:bg-gray-50 rounded-lg transition-colors">提交资源</a>
           <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="py-2 px-3 text-muted hover:text-primary hover:bg-gray-50 rounded-lg transition-colors">关于我们</a>
         </nav>
