--- a/sitemap.html
+++ b/sitemap.html
@@ -111,6 +111,7 @@
         <a href="index.html" class="text-dark hover:text-primary transition-colors">首页</a>
         <a href="free/" class="text-muted hover:text-primary transition-colors">资源分类</a>
         <a href="sitemap.html" class="text-primary font-medium">网站地图</a>
+        <a href="api.html" class="text-muted hover:text-primary transition-colors">API手册</a>
         <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="text-muted hover:text-primary transition-colors flex items-center">
           <i class="fa fa-github mr-1"></i> 提交资源
         </a>
@@ -133,6 +134,7 @@
         <a href="index.html" class="py-2 text-dark hover:text-primary transition-colors">首页</a>
         <a href="free/" class="py-2 text-muted hover:text-primary transition-colors">资源分类</a>
         <a href="sitemap.html" class="py-2 text-primary font-medium">网站地图</a>
+        <a href="api.html" class="py-2 text-muted hover:text-primary transition-colors">API手册</a>
         <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="py-2 text-muted hover:text-primary transition-colors flex items-center">
           <i class="fa fa-github mr-1"></i> 提交资源
         </a>
