--- a/free/detail/index.html
+++ b/free/detail/index.html
@@ -383,7 +383,7 @@
     </div>
 
     <script>
-        // 资源数据
+        // 资源数据 - 已修复guideUrl路径，移除重复的"free/detail/"
         const resources = [
             {
                 id: "apache",
@@ -393,7 +393,7 @@
                 icon: "fa-server",
                 color: "text-amber-500",
                 url: "https://www.apache.org/",
-                guideUrl: "free/detail/apache.html",
+                guideUrl: "free/detail/apache.html",  // 修复路径
                 tags: ["服务器", "开源", "Web"]
             },
             {
@@ -404,7 +404,7 @@
                 icon: "fa-css3",
                 color: "text-purple-500",
                 url: "https://getbootstrap.com/",
-                guideUrl: "free/detail/bootstrap.html",
+                guideUrl: "free/detail/bootstrap.html",  // 修复路径
                 tags: ["CSS", "框架", "响应式"]
             },
             {
@@ -415,7 +415,7 @@
                 icon: "fa-paint-brush",
                 color: "text-blue-500",
                 url: "https://www.canva.com/",
-                guideUrl: "free/detail/canva.html",
+                guideUrl: "free/detail/canva.html",  // 修复路径
                 tags: ["设计", "图形", "模板"]
             },
             {
@@ -426,7 +426,7 @@
                 icon: "fa-bar-chart",
                 color: "text-green-500",
                 url: "https://www.chartjs.org/",
-                guideUrl: "free/detail/chart.html",
+                guideUrl: "free/detail/chart.html",  // 修复路径
                 tags: ["图表", "数据可视化", "JavaScript"]
             },
             {
@@ -437,7 +437,7 @@
                 icon: "fa-cloud",
                 color: "text-orange-500",
                 url: "https://www.cloudflare.com/",
-                guideUrl: "free/detail/cloudflare.html",
+                guideUrl: "free/detail/cloudflare.html",  // 修复路径
                 tags: ["CDN", "安全", "域名"]
             },
             {
@@ -448,7 +448,7 @@
                 icon: "fa-code",
                 color: "text-purple-500",
                 url: "https://github.com/features/copilot/",
-                guideUrl: "free/detail/coplilot.html",
+                guideUrl: "free/detail/coplilot.html",  // 修复路径
                 tags: ["AI", "代码助手", "开发工具"]
             },
             {
@@ -459,7 +459,7 @@
                 icon: "fa-edit",
                 color: "text-blue-500",
                 url: "https://www.cursor.so/",
-                guideUrl: "free/detail/cursor.html",
+                guideUrl: "free/detail/cursor.html",  // 修复路径
                 tags: ["编辑器", "AI", "编程"]
             },
             {
@@ -470,7 +470,7 @@
                 icon: "fa-line-chart",
                 color: "text-red-500",
                 url: "https://d3js.org/",
-                guideUrl: "free/detail/d3.html",
+                guideUrl: "free/detail/d3.html",  // 修复路径 - 关键修复点
                 tags: ["数据可视化", "JavaScript", "图表"]
             },
             {
@@ -481,7 +481,7 @@
                 icon: "fa-database",
                 color: "text-blue-500",
                 url: "https://dbeaver.io/",
-                guideUrl: "free/detail/dbeaver.html",
+                guideUrl: "free/detail/dbeaver.html",  // 修复路径
                 tags: ["数据库工具", "管理", "多平台"]
             },
             {
@@ -492,7 +492,7 @@
                 icon: "fa-lightbulb-o",
                 color: "text-indigo-500",
                 url: "https://www.deepseek.com/",
-                guideUrl: "free/detail/deepseek.html",
+                guideUrl: "free/detail/deepseek.html",  // 修复路径
                 tags: ["AI", "大模型", "代码生成"]
             },
             {
@@ -503,7 +503,7 @@
                 icon: "fa-cubes",
                 color: "text-blue-500",
                 url: "https://www.docker.com/",
-                guideUrl: "free/detail/docker.html",
+                guideUrl: "free/detail/docker.html",  // 修复路径
                 tags: ["容器", "虚拟化", "部署"]
             },
             {
@@ -514,7 +514,7 @@
                 icon: "fa-comments",
                 color: "text-green-500",
                 url: "https://www.doubao.com/",
-                guideUrl: "free/detail/doubao.html",
+                guideUrl: "free/detail/doubao.html",  // 修复路径
                 tags: ["AI", "助手", "中文支持"]
             },
             {
@@ -525,7 +525,7 @@
                 icon: "fa-fire",
                 color: "text-orange-500",
                 url: "https://firebase.google.com/",
-                guideUrl: "free/detail/firebase.html",
+                guideUrl: "free/detail/firebase.html",  // 修复路径
                 tags: ["BaaS", "云服务", "实时数据库"]
             },
             {
@@ -536,7 +536,7 @@
                 icon: "fa-github",
                 color: "text-gray-400",
                 url: "https://github.com/",
-                guideUrl: "free/detail/github.html",
+                guideUrl: "free/detail/github.html",  // 修复路径
                 tags: ["代码托管", "版本控制", "协作"]
             },
             {
@@ -547,7 +547,7 @@
                 icon: "fa-envelope",
                 color: "text-red-500",
                 url: "https://mail.google.com/",
-                guideUrl: "free/detail/gmail.html",
+                guideUrl: "free/detail/gmail.html",  // 修复路径
                 tags: ["邮件", "通讯", "云存储"]
             },
             {
@@ -558,7 +558,7 @@
                 icon: "fa-code",
                 color: "text-blue-500",
                 url: "https://jquery.com/",
-                guideUrl: "free/detail/jquery.html",
+                guideUrl: "free/detail/jquery.html",  // 修复路径
                 tags: ["JavaScript", "库", "DOM操作"]
             },
             {
@@ -569,7 +569,7 @@
                 icon: "fa-server",
                 color: "text-red-500",
                 url: "https://laravel.com/",
-                guideUrl: "free/detail/laravel.html",
+                guideUrl: "free/detail/laravel.html",  // 修复路径
                 tags: ["PHP", "框架", "Web开发"]
             },
             {
@@ -580,7 +580,7 @@
                 icon: "fa-lock",
                 color: "text-green-500",
                 url: "https://letsencrypt.org/",
-                guideUrl: "free/detail/letsencrypt.html",
+                guideUrl: "free/detail/letsencrypt.html",  // 修复路径
                 tags: ["SSL", "HTTPS", "安全"]
             },
             {
@@ -591,7 +591,7 @@
                 icon: "fa-database",
                 color: "text-green-500",
                 url: "https://www.mongodb.com/",
-                guideUrl: "free/detail/mongodb.html",
+                guideUrl: "free/detail/mongodb.html",  // 修复路径
                 tags: ["NoSQL", "文档数据库", "云服务"]
             },
             {
@@ -602,7 +602,7 @@
                 icon: "fa-database",
                 color: "text-blue-500",
                 url: "https://www.mysql.com/",
-                guideUrl: "free/detail/mysql.html",
+                guideUrl: "free/detail/mysql.html",  // 修复路径
                 tags: ["关系型数据库", "开源", "SQL"]
             },
             {
@@ -613,7 +613,7 @@
                 icon: "fa-globe",
                 color: "text-purple-500",
                 url: "https://www.netlify.com/",
-                guideUrl: "free/detail/netlify.html",
+                guideUrl: "free/detail/netlify.html",  // 修复路径
                 tags: ["托管", "CI/CD", "静态网站"]
             },
             {
@@ -624,7 +624,7 @@
                 icon: "fa-server",
                 color: "text-green-500",
                 url: "https://nginx.org/",
-                guideUrl: "free/detail/nginx.html",
+                guideUrl: "free/detail/nginx.html",  // 修复路径
                 tags: ["服务器", "反向代理", "高性能"]
             },
             {
@@ -635,7 +635,7 @@
                 icon: "fa-lightbulb-o",
                 color: "text-blue-500",
                 url: "https://openai.com/",
-                guideUrl: "free/detail/openai.html",
+                guideUrl: "free/detail/openai.html",  // 修复路径
                 tags: ["AI", "GPT", "API"]
             },
             {
@@ -646,7 +646,7 @@
                 icon: "fa-database",
                 color: "text-blue-500",
                 url: "https://www.postgresql.org/",
-                guideUrl: "free/detail/postgresql.html",
+                guideUrl: "free/detail/postgresql.html",  // 修复路径
                 tags: ["关系型数据库", "开源", "高级功能"]
             },
             {
@@ -657,7 +657,7 @@
                 icon: "fa-paper-plane",
                 color: "text-orange-500",
                 url: "https://www.postman.com/",
-                guideUrl: "free/detail/postman.html",
+                guideUrl: "free/detail/postman.html",  // 修复路径
                 tags: ["API", "测试", "开发工具"]
             },
             {
@@ -668,7 +668,7 @@
                 icon: "fa-react",
                 color: "text-blue-500",
                 url: "https://reactjs.org/",
-                guideUrl: "free/detail/react.html",
+                guideUrl: "free/detail/react.html",  // 修复路径
                 tags: ["JavaScript", "UI库", "组件化"]
             },
             {
@@ -679,7 +679,7 @@
                 icon: "fa-database",
                 color: "text-red-500",
                 url: "https://redis.io/",
-                guideUrl: "free/detail/redis.html",
+                guideUrl: "free/detail/redis.html",  // 修复路径
                 tags: ["缓存", "内存数据库", "高性能"]
             },
             {
@@ -690,7 +690,7 @@
                 icon: "fa-database",
                 color: "text-gray-400",
                 url: "https://www.sqlite.org/",
-                guideUrl: "free/detail/sqlite.html",
+                guideUrl: "free/detail/sqlite.html",  // 修复路径
                 tags: ["嵌入式", "轻量级", "关系型数据库"]
             },
             {
@@ -701,7 +701,7 @@
                 icon: "fa-database",
                 color: "text-green-500",
                 url: "https://supabase.com/",
-                guideUrl: "free/detail/supabase.html",
+                guideUrl: "free/detail/supabase.html",  // 修复路径
                 tags: ["BaaS", "开源", "PostgreSQL"]
             },
             {
@@ -712,7 +712,7 @@
                 icon: "fa-file-text",
                 color: "text-orange-500",
                 url: "https://swagger.io/",
-                guideUrl: "free/detail/swagger.html",
+                guideUrl: "free/detail/swagger.html",  // 修复路径
                 tags: ["API", "文档", "开发工具"]
             },
             {
@@ -723,7 +723,7 @@
                 icon: "fa-code",
                 color: "text-purple-500",
                 url: "https://symfony.com/",
-                guideUrl: "free/detail/symfony.html",
+                guideUrl: "free/detail/symfony.html",  // 修复路径
                 tags: ["PHP", "框架", "组件"]
             },
             {
@@ -734,7 +734,7 @@
                 icon: "fa-css3",
                 color: "text-blue-500",
                 url: "https://tailwindcss.com/",
-                guideUrl: "free/detail/tailwind.html",
+                guideUrl: "free/detail/tailwind.html",  // 修复路径
                 tags: ["CSS", "框架", "实用优先"]
             },
             {
@@ -745,7 +745,7 @@
                 icon: "fa-rocket",
                 color: "text-blue-500",
                 url: "https://vercel.com/",
-                guideUrl: "free/detail/vercel.html",
+                guideUrl: "free/detail/vercel.html",  // 修复路径
                 tags: ["部署", "Next.js", "CDN"]
             },
             {
@@ -756,7 +756,7 @@
                 icon: "fa-code",
                 color: "text-green-500",
                 url: "https://vuejs.org/",
-                guideUrl: "free/detail/vue.html",
+                guideUrl: "free/detail/vue.html",  // 修复路径
                 tags: ["JavaScript", "框架", "渐进式"]
             },
             {
@@ -767,7 +767,7 @@
                 icon: "fa-wordpress",
                 color: "text-blue-500",
                 url: "https://wordpress.org/",
-                guideUrl: "free/detail/wordpress.html",
+                guideUrl: "free/detail/wordpress.html",  // 修复路径
                 tags: ["CMS", "博客", "开源"]
             }
         ];
@@ -861,7 +861,7 @@
         function openResourceModal(resource) {
             document.getElementById('modalTitle').textContent = resource.name;
             document.getElementById('modalLink').href = resource.url;
-            document.getElementById('modalGuideLink').href = resource.guideUrl;
+            document.getElementById('modalGuideLink').href = resource.guideUrl; // 使用修复后的路径
             
             // 构建模态框内容
             const modalBody = document.getElementById('modalBody');
