--- a/free/index.html
+++ b/free/index.html
@@ -249,7 +249,7 @@
             
             // 创建卡片链接
             const link = document.createElement('a');
-            const path = isDetail ? `free/detail/${name}.html` : `free/${name}.html`;
+            const path = isDetail ? `detail/${name}.html` : `${name}.html`;
             link.href = path;
             link.className = 'block';
             
