--- a/fav.html
+++ b/fav.html
@@ -14,10 +14,10 @@
 </head>
 <body>
 
-  <h1>当前页面</h1>
+  <h1>当前页面 fav-btn</h1>
   <button id="fav-btn">加入收藏</button>
 
-  <h2>已收藏页面</h2>
+  <h2>已收藏页面 fav-list</h2>
   <ul id="fav-list"></ul>
   <script type="module" src="/main.js"></script>
 
