--- a/fav.html
+++ b/fav.html
@@ -14,11 +14,11 @@
 </head>
 <body>
 
-  <h1>当前页面 fav-btn</h1>
-  <button id="fav-btn">加入收藏</button>
+  <h1>当前页面 bookmarkBtn</h1>
+  <button id="bookmarkBtn">加入收藏</button>
 
   <h2>已收藏页面 fav-list</h2>
-  <ul id="fav-list"></ul>
+  <ul id="bookmarkBtnList"></ul>
   <script type="module" src="/main.js"></script>
 
 </body>
