--- a/free/detail/sass.html
+++ b/free/detail/sass.html
@@ -19,6 +19,7 @@
     <link href="stylesheet" href="https://cdn.tailwindcss.com">
     <link href="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="/main.js"></script>
     <script>
         tailwind.config = {
             theme: {
@@ -161,6 +162,7 @@
                 <li aria-current="page" class="text-primary">Sass - CSS预处理器</li>
             </ol>
         </nav>
+        <button id="bookmarkBtn">加入收藏</button>  <ul id="bookmarkBtnList"></ul>
     </div>
 
     <!-- 主要内容 -->
